...
    func nextPage()
    func handler(result: Result<[Character], NetworkingError>)
    func didSelectRowAt(row: Int)
}

final class CharactersViewModel: CharactersViewProtocol {
    var title = "Characters Marvel"
    var dataSource: Observable<[Character]>
    var isLoading: Observable<Bool>
    var isLoadingNext: Observable<Bool>
    var error: Observable<String?>
    var service: CharacterServiceProtocol = CharacterServiceManager()
    private weak var navigationDelegate: CharactersNavigationProtocol?
...
