...
        self.image = Observable(UIImage(named: "placeholder"))
        self.titleComics = "Participations in comics" + " (\(character.comics?.available ?? 0))"
        
        if let description = character.characterDescription, description.trimmingCharacters(in: NSCharacterSet.whitespaces) != "" {
            characterDescription =  description
        } else {
            characterDescription =  "Unavailable"
        }
        
        self.setImage(url: character.urlImage ?? "")
        self.setDatasource()
    }

...
