...
        return image
    }()

    var titleDescriptionLabel: UILabel = {
        let lbl = UILabel()
        lbl.font = UIFont.boldSystemFont(ofSize: 17.0)
        lbl.text = "Description"
        lbl.translatesAutoresizingMaskIntoConstraints = false
        return lbl
    }()

    var descritionLabel: UILabel = {
        let lbl = UILabel()
...
